# sdl3_template

./: CMakeLists.txt  README.md  hello.c  install.sh  run.sh
lib/: CMakeLists.txt
sdlwiki/SDL2/: APIByCategory.html  APIContributionStyleGuide.html  Android.html  Articles.html  Books.html  CategoryAPI.html  CategoryAPICategory.html  CategoryAPIDatatype.html  CategoryAPIEnum.html  CategoryAPIEnumerators.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  CategoryAssert.html  CategoryAtomic.html  CategoryAudio.html  CategoryBits.html  CategoryBlendmode.html  CategoryCPUInfo.html  CategoryClipboard.html  CategoryEndian.html  CategoryError.html  CategoryEvents.html  CategoryFilesystem.html  CategoryGUID.html  CategoryGameController.html  CategoryGesture.html  CategoryHIDAPI.html  CategoryHaptic.html  CategoryHints.html  CategoryIO.html  CategoryInit.html  CategoryJoystick.html  CategoryKeyboard.html  CategoryKeycode.html  CategoryLoadSO.html  CategoryLocale.html  CategoryLog.html  CategoryMain.html  CategoryMessagebox.html  (+1748 more)
sdlwiki/SDL2_image/: CategoryAPI.html  CategoryAPIEnum.html  CategoryAPIEnumerators.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  FrontPage.html  IMG_Animation.html  IMG_FreeAnimation.html  IMG_GetError.html  IMG_INIT_AVIF.html  IMG_INIT_JPG.html  IMG_INIT_JXL.html  IMG_INIT_PNG.html  IMG_INIT_TIF.html  IMG_INIT_WEBP.html  IMG_Init.html  IMG_InitFlags.html  IMG_Linked_Version.html  IMG_Load.html  IMG_LoadAVIF_RW.html  IMG_LoadAnimation.html  IMG_LoadAnimationTyped_RW.html  IMG_LoadAnimation_RW.html  IMG_LoadBMP_RW.html  IMG_LoadCUR_RW.html  IMG_LoadGIFAnimation_RW.html  IMG_LoadGIF_RW.html  IMG_LoadICO_RW.html  IMG_LoadJPG_RW.html  IMG_LoadJXL_RW.html  IMG_LoadLBM_RW.html  IMG_LoadPCX_RW.html  IMG_LoadPNG_RW.html  IMG_LoadPNM_RW.html  IMG_LoadQOI_RW.html  IMG_LoadSVG_RW.html  IMG_LoadSizedSVG_RW.html  IMG_LoadTGA_RW.html  IMG_LoadTIF_RW.html  (+40 more)
sdlwiki/SDL2_mixer/: CategoryAPI.html  CategoryAPIDatatype.html  CategoryAPIEnum.html  CategoryAPIEnumerators.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  FrontPage.html  MIX_CHANNEL_POST.html  MIX_EFFECTSMAXSPEED.html  MIX_FADING_IN.html  MIX_FADING_OUT.html  MIX_INIT_FLAC.html  MIX_INIT_MID.html  MIX_INIT_MOD.html  MIX_INIT_MP3.html  MIX_INIT_OGG.html  MIX_INIT_OPUS.html  MIX_INIT_WAVPACK.html  MIX_InitFlags.html  MIX_NO_FADING.html  MUS_CMD.html  MUS_FLAC.html  MUS_GME.html  MUS_MID.html  MUS_MOD.html  MUS_MODPLUG_UNUSED.html  MUS_MP3.html  MUS_MP3_MAD_UNUSED.html  MUS_NONE.html  MUS_OGG.html  MUS_OPUS.html  MUS_WAV.html  MUS_WAVPACK.html  Mix_AllocateChannels.html  Mix_ChannelFinished.html  Mix_Chunk.html  Mix_ClearError.html  Mix_CloseAudio.html  Mix_EachSoundFont.html  (+106 more)
sdlwiki/SDL2_net/: CategoryAPI.html  CategoryAPIFunction.html  CategoryAPIMacro.html  FrontPage.html  SDLNet_AddSocket.html  SDLNet_AllocPacket.html  SDLNet_AllocPacketV.html  SDLNet_AllocSocketSet.html  SDLNet_CheckSockets.html  SDLNet_DelSocket.html  SDLNet_FreePacket.html  SDLNet_FreePacketV.html  SDLNet_FreeSocketSet.html  SDLNet_GetError.html  SDLNet_GetLocalAddresses.html  SDLNet_Init.html  SDLNet_Linked_Version.html  SDLNet_Quit.html  SDLNet_ResizePacket.html  SDLNet_ResolveHost.html  SDLNet_ResolveIP.html  SDLNet_SetError.html  SDLNet_SocketReady.html  SDLNet_TCP_Accept.html  SDLNet_TCP_AddSocket.html  SDLNet_TCP_Close.html  SDLNet_TCP_DelSocket.html  SDLNet_TCP_GetPeerAddress.html  SDLNet_TCP_Open.html  SDLNet_TCP_OpenClient.html  SDLNet_TCP_OpenServer.html  SDLNet_TCP_Recv.html  SDLNet_TCP_Send.html  SDLNet_UDP_AddSocket.html  SDLNet_UDP_Bind.html  SDLNet_UDP_Close.html  SDLNet_UDP_DelSocket.html  SDLNet_UDP_GetPeerAddress.html  SDLNet_UDP_Open.html  SDLNet_UDP_Recv.html  (+8 more)
sdlwiki/SDL2_ttf/: CategoryAPI.html  CategoryAPIDatatype.html  CategoryAPIEnum.html  CategoryAPIEnumerators.html  CategoryAPIFunction.html  CategoryAPIMacro.html  CategoryAPIStruct.html  FrontPage.html  SDL_TTF_COMPILEDVERSION.html  SDL_TTF_MAJOR_VERSION.html  SDL_TTF_VERSION.html  SDL_TTF_VERSION_ATLEAST.html  TTF_ByteSwappedUNICODE.html  TTF_CloseFont.html  TTF_Direction.html  TTF_Font.html  (+89 more)
src/: animation.c  animation.h  array.c  array.h  gui.c  gui.h  image.c  image.h  main.c  min_heap.h  page.c  page.h  render_target.c  render_target.h  rendor_target.c  rendor_target.h  text.c  text.h  tile.c  tile.h  timer_nano.c  timer_nano.h  utils.c  utils.h
(+313 files in other folders)
